syntax = "proto3";

enum Status {
    Unknown = 0;
    Success = 1;
    Fail = 2;
}

enum Command {
    CmdNone = 0;
    CmdDeviceInfoRequest = 1;
    CmdVentDataRequest = 2;
    CmdCheckFirmwareRequest = 3;
    CmdWriteFirmwareRequest = 4;
    CmdReadFirmwareRequest = 5;
}

message DeviceInfo {
    string fw_version = 2;
    string hw_version = 3;
    uint32 device_model = 4;
    string device_name = 5;
}

message FileData {
    string file_name = 1;
    uint32 file_size = 2;
    uint32 offset = 3;
    uint32 checksum = 4;
    bytes data = 5;
}


message VentData {
   uint32 breath_circulating_volumn = 1;
   uint32 breathing_frequency = 2;
   double breath_in_time = 3;
}

message VentRequest {
    Command cmd = 1;
    string access_key = 2;
    FileData read_firmware_request = 3;
    FileData write_firmware_request = 4;
}

message VentResponse {
    Status status = 1;
    DeviceInfo device_info_response = 2;
    FileData read_firmware_response = 3;
    VentData vent_data_response = 4;
}
